--- a/src/app/mmy-selector/mmy-selector.component.html
+++ b/src/app/mmy-selector/mmy-selector.component.html
@@ -2,7 +2,7 @@
 	<p>Choose Your Vehicle using MMY</p>
 	<mat-form-field appearance="fill">
 		<mat-label>Makes</mat-label>
-		<mat-select (selectionChange)="onManufacturerChange($event)" [value]="selectedManufacturer">
+		<mat-select (selectionChange)="onManufacturerChange($event)" [value]="selectedManufacturer ? selectedManufacturer.id : null">
 			<mat-option *ngFor="let manu of manufaturers" [value]="manu.id">
 				{{manu.name}}
 			</mat-option>
@@ -10,7 +10,7 @@
 	</mat-form-field>
 	<mat-form-field appearance="fill">
 		<mat-label>Models</mat-label>
-		<mat-select (selectionChange)="onModelChange($event)" [value]="selectedModel">
+		<mat-select (selectionChange)="onModelChange($event)" [value]="selectedModel ? selectedModel.id : null">
 			<mat-option *ngFor="let model of models" [value]="model.id">
 				{{model.name}}
 			</mat-option>
@@ -18,7 +18,7 @@
 	</mat-form-field>
 	<mat-form-field appearance="fill">
 		<mat-label>Years</mat-label>
-		<mat-select (selectionChange)="onYearChange($event)" [value]="selectedYear">
+		<mat-select (selectionChange)="onYearChange($event)" [value]="selectedYear ? selectedYear.id : null">
 			<mat-option *ngFor="let year of years" [value]="year.id">
 				{{year.id}}
 			</mat-option>
