--- a/src/app/vehicles-selector/vehicles-selector.component.html
+++ b/src/app/vehicles-selector/vehicles-selector.component.html
@@ -9,10 +9,12 @@
 	</section>
 	<section class="selector-section">
 		<ymm-selector *ngIf="selectedSelector === 'ymm'"
-			(onDoneSelectorEvent)="onFinishedSelector($event)">
+			(onDoneSelectorEvent)="onFinishedSelector($event)"
+			(onShowLoader)="onShowLoader($event)">
 		</ymm-selector>
 		<mmy-selector *ngIf="selectedSelector === 'mmy'"
-		(onDoneSelectorEvent)="onFinishedSelector($event)">
+		(onDoneSelectorEvent)="onFinishedSelector($event)"
+		(onShowLoader)="onShowLoader($event)">
 		</mmy-selector>
 	</section>
 	<div class="vehicle_section" *ngIf="vehicles">
@@ -20,5 +22,8 @@
 			{{vehicle.name}}
 		</div>
 		<p *ngIf="vehicles.length === 0">There is no vehicle with selectors</p>
+	</div>
+	<div class="loader-container" *ngIf="isShowLoader">
+		<mat-spinner></mat-spinner>
 	</div>
 </div>
