--- a/src/app/vehicles-selector/vehicles-selector.component.sass
+++ b/src/app/vehicles-selector/vehicles-selector.component.sass
@@ -17,3 +17,14 @@
 	.vehicle_section
 		margin-left: 15px
 
+	.loader-container
+		position: absolute
+		width: 100%
+		height: 100%
+		top: 0
+		left: 0
+		background: rgba(0,0,0,0.5)
+		display: flex
+		align-items: center
+		justify-content: center
+
